@@ -119,11 +119,10 @@ public:
     * into the by-reference parameter from.
     */
    vpr::ReturnStatus recvfrom(void* msg, const vpr::Uint32 len,
-                              const int flags, vpr::InetAddr& from,
-                              vpr::Uint32& bytesRead,
+                              vpr::InetAddr& from, vpr::Uint32& bytesRead,
                               const vpr::Interval timeout = vpr::Interval::NoTimeout)
    {
-      return mSocketDgramImpl->recvfrom(msg, len, flags, from, bytesRead,
+      return mSocketDgramImpl->recvfrom(msg, len, from, bytesRead,
                                         timeout);
    }
 
@@ -132,14 +131,13 @@ public:
     * into the by-reference parameter from.
     */
    vpr::ReturnStatus recvfrom(std::string& msg, const vpr::Uint32 len,
-                              const int flags, vpr::InetAddr& from,
-                              vpr::Uint32& bytesRead,
+                              vpr::InetAddr& from, vpr::Uint32& bytesRead,
                               const vpr::Interval timeout = vpr::Interval::NoTimeout)
    {
       msg.resize(len);
       memset(&msg[0], '\0', msg.size());
 
-      return recvfrom((void*) &msg[0], msg.size(), flags, from, bytesRead,
+      return recvfrom((void*) &msg[0], msg.size(), from, bytesRead,
                       timeout);
    }
 
@@ -148,8 +146,8 @@ public:
     * into the by-reference parameter from.
     */
    vpr::ReturnStatus recvfrom(std::vector<vpr::Uint8>& msg,
-                              const vpr::Uint32 len, const int flags,
-                              vpr::InetAddr& from, vpr::Uint32& bytesRead,
+                              const vpr::Uint32 len, vpr::InetAddr& from,
+                              vpr::Uint32& bytesRead,
                               const vpr::Interval timeout = vpr::Interval::NoTimeout)
    {
       vpr::ReturnStatus retval;
@@ -157,8 +155,7 @@ public:
       msg.resize(len);
 
       memset(&msg[0], '\0', msg.size());
-      retval = recvfrom((void*) &msg[0], msg.size(), flags, from, bytesRead,
-                        timeout);
+      retval = recvfrom((void*) &msg[0], msg.size(), from, bytesRead, timeout);
 
       // Size it down if needed, if (bytesRead==len), then resize does
       // nothing.
@@ -174,35 +171,33 @@ public:
     * Sends a message to the designated recipient.
     */
    vpr::ReturnStatus sendto(const void* msg, const vpr::Uint32 len,
-                            const int flags, const vpr::InetAddr& to,
-                            vpr::Uint32& bytesSent,
+                            const vpr::InetAddr& to, vpr::Uint32& bytesSent,
                             const vpr::Interval timeout = vpr::Interval::NoTimeout)
    {
-      return mSocketDgramImpl->sendto(msg, len, flags, to, bytesSent, timeout);
+      return mSocketDgramImpl->sendto(msg, len, to, bytesSent, timeout);
    }
 
    /**
     * Sends a message to the designated recipient.
     */
    vpr::ReturnStatus sendto(const std::string& msg, const vpr::Uint32 len,
-                            const int flags, const vpr::InetAddr& to,
-                            vpr::Uint32& bytesSent,
+                            const vpr::InetAddr& to, vpr::Uint32& bytesSent,
                             const vpr::Interval timeout = vpr::Interval::NoTimeout)
    {
       vprASSERT(len <= msg.size() && "Length is bigger than data given");
-      return sendto(msg.c_str(), len, flags, to, bytesSent, timeout);
+      return sendto(msg.c_str(), len, to, bytesSent, timeout);
    }
 
    /**
     * Sends a message to the designated recipient.
     */
    vpr::ReturnStatus sendto(const std::vector<vpr::Uint8>& msg,
-                            const vpr::Uint32 len, const int flags,
-                            const vpr::InetAddr& to, vpr::Uint32& bytesSent,
+                            const vpr::Uint32 len, const vpr::InetAddr& to,
+                            vpr::Uint32& bytesSent,
                             const vpr::Interval timeout = vpr::Interval::NoTimeout)
    {
       vprASSERT(len <= msg.size() && "Length is bigger than data given");
-      return sendto((const void*) &msg[0], len, flags, to, bytesSent, timeout);
+      return sendto((const void*) &msg[0], len, to, bytesSent, timeout);
    }
 
 protected:
